# k_means_python

./: .gitattributes  .gitignore  .pylintrc  CHANGES.txt  CITATION.bib  DOI  LICENSE  LICENSE.txt  MANIFEST.in  README.ipynb  README.md  README.py  convert_ipynb_to_md_and_py.ipynb  convert_ipynb_to_md_and_py.py  convert_md_to_ipynb_and_py.py  create_and_activate_an_enviroment.ipynb  filter_nb_metadata.py  main_k_means.ipynb  main_k_means.py  requirements.txt  setup.cfg
banco_de_dados/: QuatroPontoUm.xlsm  SetePontoUm.xlsm  aeronaves_militares.xlsx  aeronaves_militares_arbitrado.xlsx  foguetes.xlsm  hubglobe_100.xlsx  hubglobe_1000.xlsx  hubglobe_10000.xlsx  inventario_de_modelos_mesmo_peso.xlsx  inventario_de_modelos_peso_diferente.xlsx  quatro_ponto_um.xlsx  seis_ponto_um.xlsx  teste_HUBGLOBE_21092022.xlsx  turbinas_60_licoes.xlsm  turbinas_60_licoes.xlsx
databases/: .foguetes.xlsx  .injetores_l25.xlsx  .injetores_l25_2024_04_14.csv  .injetores_l25_2024_04_14.xlsx  .~lock.injetores_l25.xlsx#  SeisPontoUm.xlsm  TresPontoUm.xlsm  aeronaves_civis_arbitrado.xlsx  aeronaves_civis_arbitrado_sem_data_de_entrada_de_operacao.xlsx  aeronaves_civis_sem_data_de_entrada_de_operacao.xlsx  aeronaves_militares_arbitrado_sem_data_de_entrada_de_operacao.xlsx  aeronaves_militares_sem_data_de_entrada_de_operacao.xlsx  inventario_de_modelos_peso_diferente_sem_zeros.xlsx  tres_ponto_um.xlsx
funcoes/: gerar_grafico_dendrograma.py  gerar_relatorio_em_planilha.py  k_means.py  sortear_sementes.py
functions/: gerar_elbow_data_chart.py  gerar_grafico_dendrograma.py  gerar_grafico_elbow_data.py  (+5 more)
(+13 files in other folders)
