[metadata]
name = rbfnn_radial_basis_function_neural_networks
version = 0.0.1
author = Eden Denis F. da S. L. Santos
author_email = edendenis@gmail.com
description = k-means
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edendenis/k_means
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
